fix: personal menu alignment

--- a/resources/skins.citizen.styles/Personalmenu.less
+++ b/resources/skins.citizen.styles/Personalmenu.less
@@ -183,6 +183,7 @@
 	#p-personal {
 		position: absolute;
 		left: unset;
+		right: 0;
 		min-width: 250px;
 	}
 }
